--- a/your-cat.css
+++ b/your-cat.css
@@ -1,7 +1,7 @@
 * {
 	box-sizing: border-box;
 	font-family: Tahoma, sans-serif;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 body {
@@ -26,7 +26,7 @@ label {
 	flex-direction: column;
 	background: white;
 	padding: 60px;
-	max-width: 800px;
+	max-width: 700px;
 	margin: auto;
 }
 
@@ -51,7 +51,7 @@ h1 {
 
 #description {
 	font-style: bold;
-	font-size: 25px;
+	font-size: 18px;
 	margin: 0 0 20px 0;
 }
 
@@ -60,7 +60,7 @@ h1 {
 	text-align: center;
 	border: 3px dotted black;
 	padding: 20px;
-	font-size: 16px;
+	font-size: 14px;
 	margin: 20px;
 }
 
@@ -146,9 +146,14 @@ select {
 
 #agreement {
 	font-weight: bold;
+	font-size: 14px;
 }
 
-@media (max-width: 845px) {
+#required {
+	font-size: 12px;
+}
+
+@media (max-width: 650px) {
 	body {
 		background: white;
 	}
